--- a/CoolpyIV/package.json
+++ b/CoolpyIV/package.json
@@ -13,6 +13,7 @@
     "express": "^4.13.3",
     "express-ipfilter": "0.0.24",
     "ioredis": "^1.14.0",
+    "isvalid": "^1.3.5",
     "mongodb": "^2.1.3",
     "morgan": "^1.3.2"
   }
