--- a/CoolpyIV/package.json
+++ b/CoolpyIV/package.json
@@ -15,6 +15,7 @@
     "ioredis": "^1.14.0",
     "isvalid": "^1.3.5",
     "mongodb": "^2.1.3",
-    "morgan": "^1.3.2"
+    "morgan": "^1.3.2",
+    "uuid": "^2.0.1"
   }
 }
