use the new config

--- a/CoolpyIV/config.json
+++ b/CoolpyIV/config.json
@@ -1,15 +1,24 @@
 ﻿{
-    "mongoState": false,
-    "mongoPoolSize": 100,
-    "mongo" : "mongodb://localhost:27017",
-    "redisState": false,
-    "redis" : "redis://:jacle169@127.0.0.1:6379/2",
-    "debug" : true,
-    "port": 8080,
-    "version": "0.1.0",
-    "formFileTypes": [".jpg", ".png", ".zip", ".iso"],
     "appName": "CoolpyIV",
-    "whiteList": [
-        "0.0.0.0/0", "::ffff:127.0.0.1"
-    ]
+    "version": "0.1.0",
+
+    "mongoConfig":{
+        "isEnable":true,
+        "poolSize":100,
+        "address":"mongodb://localhost:27017",
+        "formFileTypes":[".jpg", ".png", ".zip", ".iso"]
+    },
+
+    "redisConfig":{
+        "isEnable":false,
+        "address":"redis://:jacle169@127.0.0.1:6379/2"
+    },
+
+    "systemConfig":{
+        "debug":true,
+        "port":8080,
+        "whiteList":[
+            "0.0.0.0/0", "::ffff:127.0.0.1"
+        ]
+    }
 }
